--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@emotion/style": "^0.8.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.4",
+    "@netlify/planetscale": "^1.0.0",
+    "@planetscale/database": "^1.10.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
